# neuro-car

./: .README.md.swp  .gitignore  LICENSE  README.md  config.sh  csv_to_libsvm.py  experimentResults  neuro_car_bashrc.sh  thundersvm-predict  thundersvm-train
EEGEdu-master/: package-lock.json  package.json
EEGEdu-master/public/: index.html
EEGEdu-master/src/: index.js  socket.js
archive/justinEyes_30s/: dataset_eval.scale  dataset_train.scale  eyesClosed.csv  eyesOpen.csv
archive/micahEyes_2min/: eval.libsvm  eyesOpen.csv  pred.vec  svm.model  train.libsvm
catkin_ws/src/neuro_car/: CMakeLists.txt  package.xml
catkin_ws/src/neuro_car/include/neuro_car/: gpio.h  sigint_handler.h
catkin_ws/src/neuro_car/launch/: car.launch  svm.launch  svm_attention.launch  svm_eyes.launch  svm_fatigue.launch
catkin_ws/src/neuro_car/models/: attention.model  eyes.model  fatigue.model
catkin_ws/src/neuro_car/src/: car.cpp  gpio.cpp  sigint_handler.cpp  svm.cpp
catkin_ws/src/neuro_car/src/gpio/: build.sh  gpio.c  gpio.h  testGPIO.cpp
data/: JustinEyesClosed120sec01.csv  JustinEyesOpen120sec01.csv  JustinEyesOpen120sec02.csv  micah_2_Closed2.csv  nicClosed3.csv  nicOpen3.csv
data/Fatigue/: JustinLevel01.csv  User02Level02.csv  User04Level02.csv
data/eyesOpenClosed/: JustinEyesClosed120sec02.csv  ginoClosed120sec01.csv  ginoOpen120sec01.csv  micah_1_Closed.csv  micah_2_Closed1.csv  micah_2_Open1.csv  micah_2_Open2.csv  nicClosed1.csv  nicClosed2.csv  nicClosed4.csv  nicOpen1.csv  nicOpen2.csv  nicOpen4.csv  nicOpen5.csv
data/eyesTransitions/: closedopen.csv  closedopen3.csv  openclosed.csv  openclosed3.csv
data/fatigue/: Justin2minLevel02.csv  TawsifLevel01.csv  User01Level00.csv  User01Level01.csv  User03Level02.csv  User06Level02.csv  ZubierLevel00.csv  hannahAwake1.csv  hannahAwake2.csv  hannahAwake3.csv  hannahAwake4.csv  nicTired1.csv  nicTired2.csv  nicTired3.csv  nicTired4.csv  nicTired5.csv
data/openClosed/: closedopen2.csv  closedopen4.csv  openclosed2.csv  openclosed4.csv
data/roadAwareness/: JustinFocus001.csv  (+30 more)
documentation/: experimentResults
motor/: motor.ino
scripts/: csv_to_libsvm.py  neuro_car_bashrc.sh
spectra-publisher/: client_index.html  client_side.js  package-lock.json  package.json  webpack.config.js  yeet.js
(+13 files in other folders)
