<?xml version="1.0"?>
<package>
    <name>neuro_car</name>
    <version>0.0.1</version>
    <description>EEG controlled RC car</description>

    <maintainer email="dummy@dummy.com">Nicholas Wengel</maintainer>

    <license>TODO</license>

    <author email="dummy@dummy.com">Nicholas Wengel</author>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>std_msgs</build_depend>

    <run_depend>roscpp</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>message_runtime</run_depend>
</package>
